--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <Div class="conteiner m-5" style="background-color: aliceblue;">
         <div class="Formulario__contacto">
             <form  class="text-center border border-light p-5" action="#!">
-               <p class="h4 mb-4">Ingrese su Interes</p>
-                  <input type="text" id="defaultContactFormName" class="form-control mb-4" placeholder="Nombre y Apellido">
-                  <input type="text" class="form-control mb-4" placeholder="Telefono">
-                  <input type="email" id="defaultContactFormEmail" class="form-control mb-4" placeholder="E-mail">
-                  <input type="text" id="plan" class="form-control mb-4" placeholder="Plan Elegido">                 
-                </select>
-                <input type="Edad" id="defaultContactFormEmail" class="form-control mb-4" placeholder="Edad">
+                <p class="h4 mb-4">Ingrese su Interes</p>
+                <input type="text" id="defaultContactFormName" class="form-control mb-4" placeholder="Nombre y Apellido">
+                <input type="text" class="form-control mb-4" placeholder="Telefono">
+                <input type="email" id="defaultContactFormEmail" class="form-control mb-4" placeholder="E-mail">
+                <input type="text" id="planElegido" class="form-control mb-4" placeholder="Plan Elegido">                 
+              </select>
+              <input type="text" id="EdadSocio" class="form-control mb-4" placeholder="Edad">
                  <label>Esta Casado/Concubinato</label>
                 <select class="browser-default custom-select mb-4">
                     <option value="1" disabled>Seleccione una opcion</option>
