--- a/index.html
+++ b/index.html
@@ -72,8 +72,30 @@
                 </div>
             </div>
         </section>
-        
-        <Div class="container m-5">
+        <section style="background-image: url(Imagenes/Particular.png); height: 400px;">
+            <div class="jumbotron m-5">
+                <h1 class="display-4" id="titulo_Cotiza">Particular</h1>
+                <p class="lead" id="texto_Cotiza">Cotiza un plan para vos o tu familia de forma particular y accede a la cobertura en 48 Hs habiles.</p>
+                <a class="btn btn-lg" href="#" role="button" id="btn_Cotiza">Calcular</a>
+            </div>
+        </section>
+        <section style="background-image: url(Imagenes/Monotributo.png); height: 400px;">
+            <div class="jumbotron m-5">
+                <h1 class="display-4" id="titulo_Cotiza">Monotributo</h1>
+                <p class="lead" id="texto_Cotiza">Cotiza un plan para vos o tu familia de forma particular y accede a la cobertura en 48 Hs habiles.</p>
+                <a class="btn btn-lg" href="#" role="button" id="btn_Cotiza">Calcular</a>
+            </div>
+        </section>
+        <section style="background-image: url(Imagenes/Dependencia.png); height: 400px;">
+            <div class="jumbotron m-5">
+                <h1 class="display-4" id="titulo_Cotiza">Relacion de Dependencia</h1>
+                <p class="lead" id="texto_Cotiza">Cotiza un plan para vos o tu familia de forma particular y accede a la cobertura en 48 Hs habiles.</p>
+                <a class="btn btn-lg" href="#" role="button" id="btn_Cotiza">Calcular</a>
+            </div>
+        </section>
+
+
+       <!-- <Div class="container m-5">
             <div class="Formulario__contacto" style="background-image: url(Imagenes/Fonde_Datos.png);">
                 <form  class="text-center border border-light p-5" action="#!">
                     <div id="errorAlCompletar"></div>
@@ -133,11 +155,37 @@
                 <div id="resumen" style="display: none;"></div>
                 <div id="resultado" style="display: none;"></div>
             </div>
-        </Div>
-
+        </Div> -->
+        
     </main>
+    <footer>
+        <div class="footer">
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-9 col-sm-12">
+                 <div class="redes-container" style="margin: 50px;">
+                  <ul>
+                    <li><a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a></li>
+                    <li><a href="#" class="instagram"><i class="fab fa-instagram"></i></a></li>
+                    <li><a href="#" class="email"><i class="fas fa-at"></i></a></li>
+                    <li><a href="#" class="whatapp"><i class="fab fa-whatsapp"></i></a></li>
+                   </ul>
+                  </div>
+               </div>
+              <div class="col-lg-3  col-sm-12">
+                 <div class="Direccion" style="margin: 50px;">
+                  <p>9 de Julio 2205 - Casilda - Santa Fe <br>Lunes a Viernes de 9 a 18 hs</p>
+                 </div>
+               </div>
+            </div>
+          </div>
+        </div>
+      </footer>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
     <script src="JavaScript/script.js"></script>
 
 </body>
